before firebase microsoft login
in this push
mirosoft login is working but not redirecting back to app after login
next==>
i'm going to try with firebase microsoft login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_local_notifications: ^19.1.0
   flutter_timezone: ^4.1.0
   permission_handler: ^12.0.0+1
+  flutter_appauth: ^9.0.0
 
 dev_dependencies:
   flutter_test:
