--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,12 +27,13 @@ android {
         applicationId = "com.example.mycalender"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+//        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         manifestPlaceholders = [
-                appAuthRedirectScheme: "com.example.mycalendar"
+                appAuthRedirectScheme: "com.example.mycalender"
         ]
     }
 
