--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_timezone: ^4.1.0
   permission_handler: ^12.0.0+1
   flutter_appauth: ^9.0.0
+  firebase_auth: ^5.5.3
+  oauth_webauth: ^5.1.0
+  flutter_web_auth_2: ^4.1.0
 
 dev_dependencies:
   flutter_test:
