--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,10 @@ dependencies:
   permission_handler: ^12.0.0+1
   flutter_appauth: ^9.0.0
   firebase_auth: ^5.5.3
+#  msal_auth: ^3.1.4
   oauth_webauth: ^5.1.0
   flutter_web_auth_2: ^4.1.0
+
 
 dev_dependencies:
   flutter_test:
